# DataEvolver

./: .gitignore  LICENSE  MAC_MIGRATION.md  PIPELINE_STATE.json  README.md  README_zh.md  agg_v5.py  aggregate_results.py  aggregate_v4b_full.py  analyze_evolution.py  apply_v5_patch.py  check_v4b.py  check_v4b_full.py  fix_patch3b.py  fix_pstate_scope.py  generate_pseudo_reference.py  pyproject.toml  render_scene_background.py  resume_dual_loop.sh  run_evolution_loop.py  run_scene_agent_step.py  run_scene_rotation_dataset_multi_gpu.py  run_step2_batch.py  run_vlm_batch.py  scene_v7.json  scene_v7_obj002_loop.json  stage4_scene_render.py  stage5_5_vlm_review.py  stage5_6_feedback_apply.py  start_dual_loop.sh  test_pipeline.py  test_vlm_review.py  verify_v3.py  verify_v4.py  项目经历.md
configs/: action_space.json  outdoor9.json  production_profile.example.json  scene_action_space.json  scene_pool.json  scene_template.json  scene_template_outdoor11.json  scene_template_outdoor13.json  scene_template_outdoor14.json  scene_template_outdoor15.json  scene_template_outdoor16.json  scene_template_outdoor7.json  scene_template_outdoor9.json  scene_template_smoke_256_eevee.json  vlm_review_schema.json
docs/: ARIS_STAGE0_TO_REPRO_WORKFLOW.md  BLENDER_MCP_REMOTE.md  STAGE0_WEBSEARCH_HANDOFF.md  STAGE0_WEBSEARCH_TEST_REPORT.md  UNIVERSAL_3D_LAYOUT_DATASET.md  configuration.md
latex_source/: main.tex
paper/: DRAFT.md  DRAFT_CN.md  main.tex  references.bib
pipeline/: asset_lifecycle.py  batch_dual_render.sh  demo_dual_object_placement.py  diag_mesh_floor.py  hyworld_intermediate_store.py  hyworld_scene_contract.py  image_super_utils_patch.py  production_runtime.py  rotation_geomodal_dataset.py  run_all.sh  run_dual_object_pipeline.py  run_scene_agent_step.py  stage1_text_expansion.py  stage2_5_rgba_gate.py  stage2_5_sam2_segment.py  stage2_t2i_generate.py  stage3_5_mesh_sanitize.py  stage3_image_to_3d.py  stage3_parallel.sh  stage4_batch_render.sh  stage4_blender_render.py  stage4_scene_modal_export.py  stage4_scene_render.py  stage5_5_vlm_review.py  stage5_6_feedback_apply.py  stage5_merge_metadata.py  wait_and_run_stage4.sh
runtime_prompts/: AI_REPRODUCTION_GUIDE.md  NEW_AI_REPRO_PROMPT_TEMPLATE.md
scripts/: 4-2.py  RESEARCH_PRIOR_STAGE0.md  apply_external_feedback_to_dataset.py  batch_render_depth_normal.sh  batch_render_parallel.sh  bootstrap_dataevolver_default.sh  bootstrap_scene_yaw000_objects.py  build_accepted_pair_root_from_gate.py  build_bright_full_pipeline.sh  build_external_feedback_loop.py  build_hyworld_scene_view_shards.py  build_object_split_for_rotation_dataset.py  build_rotation4_basic_dataset.py  build_rotation8_geommeta_from_consistent.py  build_rotation8_geomodal_trainready_dataset.py  build_rotation8_trainready_dataset.py  build_rotation_bbox_condition_dataset.py  build_rotation_object_brightened_dataset.py  build_scene_assets_from_stage1.py  build_scene_full50_expansion_pipeline.py  build_worldmirror_scene_mesh.py  calc_rotation_eval_metrics.py  continue_pipeline_steps3_9.sh  create_hyworld_scene_blend.py  create_minimal_scene_blend.py  dataevolver_production.py  eval_dataset_vlm.py  eval_rotation_lora_inference.py  export_rotation8_from_best_object_state.py  export_scene_dataset_v0.py  export_scene_multiview_from_evolution.py  export_scene_multiview_from_pair_evolution.py  finalize_hyworld_object_scene_report.py  find_hyworld_visible_support_anchor.py  force_accept_all.py  inspect_rotation_geomodal_loader.py  launch_30obj_sequential_scenes.sh  launch_new_asset_force_rot8.sh  (+64 more)
(+170 files in other folders)
